==> Fireflyluo/PY32f403_dome/BSP/py32_drivers/Src/drv_gpio.c <==
#include "drv_gpio.h"
#define GPIO_PIN_COUNT (sizeof(gpio_pins) / sizeof(gpio_pins[0]))

gpio_err_t gpio_init(void)
{
  /* 初始化时钟等硬件资源 */
  /* 这里可以初始化所有GPIO端口的时钟 */
  __HAL_RCC_GPIOA_CLK_ENABLE();
  __HAL_RCC_GPIOB_CLK_ENABLE();
  __HAL_RCC_GPIOC_CLK_ENABLE();
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOE_CLK_ENABLE();

  return GPIO_OK;
}

void gpio_write(gpio_pin_t pin, GPIO_PinState value)
{
  const struct gpio_pin_index *index;

  index = gpio_get_pin(pin);
  if (index == NULL)
  {
    return;
  }

  HAL_GPIO_WritePin(index->gpio, index->pin_bit,
                    (value == GPIO_PIN_SET) ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

GPIO_PinState gpio_read(gpio_pin_t pin)
{
  const struct gpio_pin_index *index;

  index = gpio_get_pin(pin);
  if (index == NULL)
  {
    return GPIO_PIN_RESET;
  }

  GPIO_PinState state = HAL_GPIO_ReadPin(index->gpio, index->pin_bit);
  return (state == GPIO_PIN_SET) ? GPIO_PIN_SET : GPIO_PIN_RESET;
}

void EXTI0_IRQHandler(void)
{
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_0))
  {
    gpio_irq_handler(0);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_0);
  }
}

void EXTI1_IRQHandler(void)
{
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_1))
  {
    gpio_irq_handler(1);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_1);
  }
}

void EXTI2_IRQHandler(void)
{
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_2))
  {
    gpio_irq_handler(2);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_2);
  }
}

void EXTI3_IRQHandler(void)
{
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_3))
  {
    gpio_irq_handler(3);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_3);
  }
}

void EXTI4_IRQHandler(void)
{
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_4))
  {
    gpio_irq_handler(4);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_4);
  }
}

void EXTI9_5_IRQHandler(void)
{
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_5))
  {
    gpio_irq_handler(5);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_5);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_6))
  {
    gpio_irq_handler(6);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_6);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_7))
  {
    gpio_irq_handler(7);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_7);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_8))
  {
    gpio_irq_handler(8);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_8);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_9))
  {
    gpio_irq_handler(9);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_9);
  }
}

void EXTI15_10_IRQHandler(void)
{
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_10))
  {
    gpio_irq_handler(10);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_10);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_11))
  {
    gpio_irq_handler(11);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_11);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_12))
  {
    gpio_irq_handler(12);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_12);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_13))
  {
    gpio_irq_handler(13);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_13);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_14))
  {
    gpio_irq_handler(14);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_14);
  }
  if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_15))
  {
    gpio_irq_handler(15);
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_15);
  }
}
